Make launch bubble and project create/edit bubbles generic and resource-defined.