@@ -30,6 +30,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -133,7 +134,7 @@ private boolean checkWebRelay(String id)
    if (!id.startsWith("http")) id = "http://" + id;
 
    try {
-      URL u = new URL(id);
+      URL u = new URI(id).toURL();
       URLConnection c = u.openConnection();
       c.setConnectTimeout(5000);
       InputStream ins = c.getInputStream();
